removed issue of images exiting textbox with overflow hidden and amended cms so paired block and paired textbox are combined

--- a/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
+++ b/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
@@ -568,6 +568,17 @@ figure {
   // padding-bottom: 25px;
 }
 
+.textbox {
+  overflow: hidden;
+  padding-bottom: 25px;
+}
+
+.textbox img {
+  width: 37%;
+  float: left;
+  padding-right: 25px;
+}
+
 .textParagraphs, .textSentences {
     padding-left: 25px;
     padding-right: 25px;
@@ -619,11 +630,7 @@ figure {
 //   // padding-bottom: 10;
 // }
 
-//   .textbox img {
-//   width: 45%;
-//   float: left;
-//   padding-right: 25px;
-// }
+
 
 .contactForm {
   // background-color: pink;
@@ -1072,6 +1079,7 @@ nav {
   width: 45%;
   float: left;
   padding-right: 25px;
+  padding-bottom: 1px;
 }
 
 
